--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-emacs/vanilla-emacs/*
-nvim/.config/nvim/lazy-lock.json
-
-!emacs/vanilla-emacs/init.el
-!emacs/vanilla-emacs/+*
+vanilla-emacs/*
+!vanilla-emacs/init.el
+!vanilla-emacs/+*
