--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -312,7 +312,9 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-windowrulev2 = workspace 1, class:firefox
-windowrulev2 = workspace 2, class:Ghostty
-windowrulev2 = workspace 3, class:emacs
-windowrulev2 = workspace 4, class:Nautilus
+windowrule = workspace 1, class:firefox
+windowrule = workspace 2, class:Ghostty
+windowrule = workspace 3, class:emacs
+
+windowrule = workspace 4, class:org.gnome.Nautilus
+bind = $mainMod, e, workspace, 4
