--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,11 +36,14 @@ $menu = rofi -show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = ags -c ~/.config/ags/config.js &
-
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+#
+exec-once = eww open bar
+
+exec-once = firefox
+exec-once = emacs --init-directory ~/vanilla-emacs/
 
 
 #############################
@@ -224,9 +227,11 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
-bind = $mainMod, q, killactive,
+bind = $mainMod, q, killactive
+bind = $mainMod, f, fullscreen
 
-bind = $mainMod, M, exit,
+bind = $mainMod shift, M, exit,
+
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
@@ -313,8 +318,7 @@ windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 windowrule = workspace 1, class:firefox
-windowrule = workspace 2, class:Ghostty
-windowrule = workspace 3, class:emacs
+windowrule = workspace 3, class:Emacs
 
 windowrule = workspace 4, class:org.gnome.Nautilus
 bind = $mainMod, e, workspace, 4
