--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -318,7 +318,7 @@ windowrule = suppressevent maximize, class:.*
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
 windowrule = workspace 1, class:firefox
-windowrule = workspace 3, class:Emacs
+windowrule = workspace 3, class:emacs
 
 windowrule = workspace 4, class:org.gnome.Nautilus
 bind = $mainMod, e, workspace, 4
