Generalize class regexes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -317,8 +317,8 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-windowrule = workspace 1, class:firefox
-windowrule = workspace 3, class:Emacs
+windowrule = workspace 1, class:(?i).*firefox
+windowrule = workspace 3, class:(?i)Emacs
 
 windowrule = workspace 4, class:org.gnome.Nautilus
 bind = $mainMod, e, workspace, 4
