[SSH]: Add new hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,2 +1,14 @@
 Host *
-	SetEnv TERM=xterm-256color
+    SetEnv TERM=xterm-256color
+
+Host fati
+    HostName 172.16.10.27
+    User fati
+
+Host crypto
+    Hostname 172.16.40.73
+    User orhan_dev
+
+Host proxmox
+    Hostname 172.16.40.70
+    User orhan
