--- a/.ssh/config
+++ b/.ssh/config
@@ -12,3 +12,11 @@ Host crypto
 Host proxmox
     Hostname 172.16.40.70
     User orhan
+
+Host pi
+    Hostname 100.111.241.94
+    User pi
+
+Host pi.local
+    Hostname 192.168.1.80
+    User pi
