[SSH]: add nixos too

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,8 @@
 Host *
     SetEnv TERM=xterm-256color
 
+# --- Development Servers ---
+
 Host fati
     HostName 172.16.10.27
     User fati
@@ -13,6 +15,8 @@ Host proxmox
     Hostname 172.16.40.70
     User orhan
 
+# --- Local Network Devices ---
+
 Host pi
     Hostname 100.111.241.94
     User pi
@@ -20,3 +24,7 @@ Host pi
 Host pi.local
     Hostname 192.168.1.80
     User pi
+
+Host nixos
+    Hostname 100.89.139.104
+    User berkay
