i hate escape codes

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,6 +4,7 @@ setw -g pane-base-index 1
 setw -g mouse on
 
 set -g history-limit 65535
+set-option -g escape-time 0
 
 set -g default-terminal "tmux-256color"
 set-option -a terminal-features "alacritty:RGB"
